# Hello-World-Rust-GTK

./: Cargo.toml  README.md
Assets/: byTeam.json  byYear.json
src/: app.rs  css.rs  home.rs  main.rs  strings.rs  team.rs  year.rs
src/data/: mod.rs  strings.rs  team.rs  year.rs
src/ui/: by_team.rs  by_year.rs  home.rs  mod.rs
src/widget/: center_box.rs  label.rs  loading.rs  mod.rs
