[package]
name = "hello-world-rust-gtk"
description = "A hello world using gtk in rust"
version = "0.1.0"
authors = ["Ademar Alves de Oliveira <ademar111190@gmail.com>"]
edition = "2018"

[dependencies.gdk]
version = "0.12.1"

[dependencies.glib]
version = "0.9.3"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
